[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "opticks"
version = "0.1.0"
dependencies = ["numpy", "scipy>=1.13.0", "portion", "astropy", "pydantic>=2.0", "pyyaml", "prysm", "matplotlib"]

requires-python = ">=3.11"

authors = [{ name = "Egemen Imre" }]

description = "Models and analysis tools for optical system engineering"
readme = "README.md"
license = "GPL-3.0-or-later"

keywords = [
    "optics",
    "optical design",
    "drone",
    "robot vision",
    "satellite",
    "remote sensing",
    "earth observation",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]


[project.urls]
Homepage = "https://github.com/egemenimre/opticks/"
Documentation = "https://opticks.readthedocs.io/en/latest/"
Repository = "https://github.com/egemenimre/opticks/"

[project.optional-dependencies]
test = ["pytest", "coverage", "pytest-xdist"]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-notfound-page",
    "sphinx-hoverxref",
    "myst-parser",
    "nbsphinx",
    "ipykernel",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "I"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["opticks"]

[tool.pytest.ini_options]

[tool.coverage.report]
omit = [
    "ci-helpers/*",
    "*/tests/*",
    "*/plots/*",
    "*/temp/*",
    "*__init__.py",
]
exclude_lines = [
    "def __repr__",
    "def __str__",
    "pragma: no cover",
]
